--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/daniel_luzius_logo_default.png">
+  <meta name="google" content="notranslate">
 </head>
 
 <body>
